--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,12 @@
 platform = espressif32
 board = esp32-s3-devkitc-1
 framework = espidf
+
+board_build.flash_mode = qio
+board_build.f_flash = 80000000L
+board_build.f_cpu = 240000000L
+
+board_upload.flash_size = 16MB
+board_upload.maximum_size = 16777216
+
+monitor_speed = 115200
