--- a/platformio.ini
+++ b/platformio.ini
@@ -21,6 +21,7 @@ board_upload.flash_size = 16MB
 board_upload.maximum_size = 16777216
 
 monitor_speed = 115200
+board_build.partitions = partitions.csv
 
 build_flags =
     -I include
