--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,7 +2,8 @@
 
 # Registra il componente principale
 idf_component_register(
-    SRCS "main.cpp" "wifi.cpp" "comune.cpp" "console.cpp" "buffers.psram.cpp" "telnet_server.cpp" "time_sync.cpp" "core1.cpp" "door.cpp"
+    SRCS "main.cpp" "wifi.cpp" "comune.cpp" "console.cpp" "buffers.psram.cpp" "telnet_server.cpp" "time_sync.cpp" 
+    "core1.cpp" "door.cpp" "http_server.cpp" "ota_handlers.cpp" 
     INCLUDE_DIRS "../include"
     REQUIRES esp_http_server esp_wifi nvs_flash spiffs
 )
